// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationStateDemo can set active with checkbox - push 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": true,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set active with checkbox 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": true,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set age with button 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 30,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set age with button 2`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 45,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set age with button 3`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set age with text field 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 33,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set date with date field 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": false,
 "date": "2019-05-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set name & age with button 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Felix",
 "age": 30,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set name & age with button 2`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Kim",
 "age": 45,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set name & age with button 3`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set name with button 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Felix",
 "age": 25,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set name with button 2`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Kim",
 "age": 25,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set name with button 3`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set name with text field 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Mila",
 "age": 25,
 "active": false,
 "date": "2019-01-01T00:00:00.000Z"
}
</pre>
`;

exports[`LocationStateDemo can set null in date field 1`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": false,
 "date": null
}
</pre>
`;

exports[`LocationStateDemo can set null in date field 2`] = `
<pre
  data-testid="pre-query-state"
>
  {
 "name": "Sarah",
 "age": 25,
 "active": false,
 "date": null
}
</pre>
`;
